--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -120,6 +120,48 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2025-03-30">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-3-30-node-share-links.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="3月30日→19.3M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-3-30-node-share-links.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月30日→19.3M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、欧洲、新加坡、日本、加拿大、香港、美国等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-03-28">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/fef0909e4847bf6f5fa889948879dd84.webp" alt="3月28日→18.4M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月28日→18.4M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、韩国、香港、加拿大、欧洲、日本、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-03-27">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-3-27-clash-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/ff9c8967726b63baf53a54f2227f5ddb.webp" alt="3月27日→20.1M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-3-27-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月27日→20.1M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、欧洲、日本、香港、美国等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2025-03-26">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2025-3-26-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -218,48 +260,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-03-18">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-3-18-shadowrocket-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7aa6e6a64f6cba0d37441ab3be847079.webp" alt="3月18日→19.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-3-18-shadowrocket-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">3月18日→19.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了美国、加拿大、日本、韩国、香港、欧洲、新加坡等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-03-17">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-3-17-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/819f1aade82ef2f65ccdf55abb283a16.webp" alt="3月17日→21.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-3-17-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">3月17日→21.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了韩国、欧洲、香港、加拿大、美国、日本、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-03-16">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-3-16-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/33b1ff2369380b61bcbd99951db89701.webp" alt="3月16日→21.6M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-3-16-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">3月16日→21.6M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、新加坡、韩国、美国、加拿大、日本、香港等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -270,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-4-free-clash.htm" title="4月4日→20.5M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">4月4日→20.5M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-69986.htm" title="Shell常用脚本：Nginx安装脚本">Shell常用脚本：Nginx安装脚本</a></li>
-                        <li class="py-2"><a href="/news/article-83600.htm" title="在Java中从控制台读取输入的方法">在Java中从控制台读取输入的方法</a></li>
-                        <li class="py-2"><a href="/news/article-73956.htm" title="宠物医院社会实践心得（宠物医院实践活动总结）">宠物医院社会实践心得（宠物医院实践活动总结）</a></li>
-                        <li class="py-2"><a href="/news/article-87173.htm" title="动物疫苗接种时间查询app（动物疫苗批号查询）">动物疫苗接种时间查询app（动物疫苗批号查询）</a></li>
-                        <li class="py-2"><a href="/news/article-69987.htm" title="动物疫苗去哪里买比较好 动物疫苗去哪里买比较好一点">动物疫苗去哪里买比较好 动物疫苗去哪里买比较好一点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-15-free-high-speed-nodes.htm" title="3月15日→22.7M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">3月15日→22.7M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-93805.htm" title="【Vue.js】兄弟组件之间调用对方的方法">【Vue.js】兄弟组件之间调用对方的方法</a></li>
-                        <li class="py-2"><a href="/news/article-86466.htm" title="SSM三大框架工作流程与原理详解">SSM三大框架工作流程与原理详解</a></li>
-                        <li class="py-2"><a href="/news/article-71310.htm" title="动物医院的英文名叫什么（动物医院英语翻译）">动物医院的英文名叫什么（动物医院英语翻译）</a></li>
+                        <li class="py-2"><a href="/news/article-104343.htm" title="Python 查找算法_众里寻他千百度，蓦然回首那人却在灯火阑珊处（线性、二分，分块、插值查找算法)">Python 查找算法_众里寻他千百度，蓦然回首那人却在灯火阑珊处（线性、二分，分块、插值查找算法)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-14-node-share.htm" title="4月14日→21.3M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">4月14日→21.3M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-72623.htm" title="宠物医院仓鼠看病贵吗（宠物医院给仓鼠看病）">宠物医院仓鼠看病贵吗（宠物医院给仓鼠看病）</a></li>
+                        <li class="py-2"><a href="/news/article-75303.htm" title="动物疫苗需要每年都打吗多少钱（动物疫苗需要每年都打吗多少钱）">动物疫苗需要每年都打吗多少钱（动物疫苗需要每年都打吗多少钱）</a></li>
+                        <li class="py-2"><a href="/news/article-81482.htm" title="猫三联一共几针,间隔多久打第二针好（猫三联每针间隔多久打一次）">猫三联一共几针,间隔多久打第二针好（猫三联每针间隔多久打一次）</a></li>
+                        <li class="py-2"><a href="/news/article-98293.htm" title="宠物粮市场分析图（宠物粮市场份额）">宠物粮市场分析图（宠物粮市场份额）</a></li>
+                        <li class="py-2"><a href="/news/article-76663.htm" title="兰州宠物用品批发进货渠道在哪（兰州宠物用品批发市场在哪里）">兰州宠物用品批发进货渠道在哪（兰州宠物用品批发市场在哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-80787.htm" title="饲料加盟免费代理多少钱（饲料加盟免费代理多少钱啊）">饲料加盟免费代理多少钱（饲料加盟免费代理多少钱啊）</a></li>
+                        <li class="py-2"><a href="/news/article-98292.htm" title="victoriaMetrics中的一些Sao操作_在线工具">victoriaMetrics中的一些Sao操作_在线工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-7-node-share.htm" title="4月7日→20.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">4月7日→20.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -291,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">73</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
